Set version to 2.0.0 and update history

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visa-jupyter-proxy",
-  "version": "2.0.0-SNAPSHOT",
+  "version": "2.0.0",
   "description": "VISA Jupyter Proxy",
   "main": "index.js",
   "scripts": {
