--- a/package.json
+++ b/package.json
@@ -11,29 +11,33 @@
   },
   "keywords": [],
   "author": "",
-  "devDependencies": {
-    "@types/node": "^14.11.8",
-    "@types/cookie": "^0.4.0",
-    "@types/http-proxy": "^1.17.4",
-    "@types/jwt-decode": "^2.2.1",
-    "@types/moment-timezone": "^0.5.30",
-    "@types/node-persist": "^3.1.0",
-    "@types/winston-syslog": "^2.0.3",
-    "nodemon": "^2.0.4",
-    "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ILLGrenoble/visa-jupyter-proxy.git"
   },
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^1.3.6",
     "bottleneck": "^2.19.5",
-    "cookie": "^0.4.1",
-    "dotenv": "^8.2.0",
+    "cookie": "^0.5.0",
+    "dotenv": "^16.0.3",
     "http-proxy": "^1.18.1",
-    "jwt-decode": "^3.0.0",
-    "moment-timezone": "^0.5.31",
-    "node-persist": "^3.1.0",
-    "winston": "^3.3.3",
-    "winston-syslog": "^2.4.4"
+    "jwt-decode": "^3.1.2",
+    "moment-timezone": "^0.5.43",
+    "node-persist": "^3.1.3",
+    "winston": "^3.8.2",
+    "winston-syslog": "^2.7.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.16.1",
+    "@types/cookie": "^0.5.1",
+    "@types/http-proxy": "^1.17.11",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/moment-timezone": "^0.5.30",
+    "@types/node-persist": "^3.1.3",
+    "@types/winston-syslog": "^2.4.0",
+    "nodemon": "^2.0.22",
+    "rimraf": "^5.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
