Add 'Trigger external deploy pipeline' job to github workflow.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,3 +42,12 @@ jobs:
           file       : ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+
+      - name: Trigger external deploy pipeline
+        if: success()
+        run: |
+            if [ -z "${{ secrets.DEPLOY_PIPELINE_URL }}" ]; then
+              echo "Error: DEPLOY_PIPELINE_URL is not set"
+            else
+              curl -X POST "${{ secrets.DEPLOY_PIPELINE_URL }}"
+            fi
